--- a/src/app/joc/joc.component.html
+++ b/src/app/joc/joc.component.html
@@ -29,7 +29,10 @@
         class="played-card"
         src="/assets/img/cards/{{ card }}.png"
       />
+
     }
+
+
 
     <!-- Current card (Animation)-->
     <img
@@ -42,8 +45,11 @@
 
   </div>
 
+
+  <h2>Nom de la carta {{cartaActual}}</h2>
+  <h3> punts: {{punts}}</h3>
   <div class="start-label-box">
-    <img src="assets/img/play.png" alt="">
+     <img src="assets/img/play.png" alt="">
   </div>
 
 </div>
