--- a/src/app/jugador/jugador.component.html
+++ b/src/app/jugador/jugador.component.html
@@ -1,4 +1,6 @@
 <div class="player">
-  <img src="/assets/img/profile/1.webp" alt="">
+  <img id="imatges" src="{{imatge}}" alt="">
   <span>{{ name }}</span>
+
 </div>
+
